app/app-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hostname-app
  labels:
    app: hostname
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hostname
  template:
    metadata:
      labels:
        app: hostname
    spec:
      containers:
        - name: hostname
          image: softvu/test-app:1.0.0
          ports:
            - containerPort: 80
              name: http
---
kind: Service
apiVersion: v1
metadata:
  name: hostname-app
spec:
  selector:
    app: hostname
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
  selector:
    app: redis
