app/app-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hostname-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hostname-app.localhost
    http:
      paths:
      - backend:
          serviceName: hostname-app
          servicePort: 80
